add academy and update academy updated

--- a/angularapp1/src/app/updateacademy/updateacademy.component.css
+++ b/angularapp1/src/app/updateacademy/updateacademy.component.css
@@ -1,34 +1,47 @@
+/* .main{
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  height:600px;
+  justify-content:center;
+} */
 #academyBackground{
     
   background-repeat: no-repeat;
   background-size: cover;
-}
+} 
+
 #academyHeader{
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height:50px;
-  background-color:green;
+  background-color:rgb(3, 3, 3); 
   
 
 }
 h2{
   margin-left: 20px;
+  color: white;
+  font-size: 20px;
 }
 #academyList{
   display: flex;
   flex: 1;
   justify-content: center;
+  font-size: 20px;
   
 }
-#academyBackground{
-  background-color: gray;
+ #academyBackground{
+  background-image: url("https://images.pexels.com/photos/472311/pexels-photo-472311.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+
   position: fixed;
   width: 100%;
   height:600px;
   justify-content:center;
-}
+} 
 
 ul li{
   padding: 55px;
@@ -40,7 +53,8 @@ ul li button{
   cursor: pointer;
   border: none;
   background: none;
-  font-size: medium;
+  color:white;
+  font-size: 20px;
   
 }
 ul li button:hover{
@@ -52,11 +66,11 @@ ul li button:hover{
 h5{
   display: flex;
   align-items: center;
-  margin-top:50px ;
-  margin-left: 50%;
-  margin-bottom: 5%;
-  font-size: medium;
-  font-weight: bold;
+  margin-top:25px ;
+  margin-left: 38%;
+  margin-bottom: 3.1%;
+  font-size: 25px;
+  font-weight: 530;
 }
 
 
@@ -65,11 +79,13 @@ h5{
   border: none;
   background: none;
   margin-right:20px ;
+  color: white;
+  font-size: 20px;
   
 }
 
 #logout:hover{
-  color: brown;
+  color: rgb(141, 17, 17);
 }
 #academyLeft{
   display: flex ;
@@ -91,7 +107,7 @@ h5{
 #academyCenter {
   justify-content: center;
   float: right;
-  margin-right:35%;
+  margin-right:30%;
 
 
   
@@ -108,13 +124,23 @@ h5{
   margin-right: 2%;
   border-radius:5%;
 }
-#updateacademy{
+#addAcademy{
   border-radius: 9px;
 }
 
 ::placeholder{
-
+  font-style: italic;
   font-size: medium;
+}
+input{
+  border-radius: 12px;
+}
+label{
+  font-size: 20px;
+  font-weight: 530;
+  
+  /* font-variant:small-caps; */
+
 }
 
 
