--- a/angularapp1/src/app/addacademy/addacademy.component.css
+++ b/angularapp1/src/app/addacademy/addacademy.component.css
@@ -1,121 +1,146 @@
+/* .main{
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  height:600px;
+  justify-content:center;
+} */
 #academyBackground{
     
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  #academyHeader{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height:50px;
-    background-color:green;
-    
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
+
+#academyHeader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height:50px;
+  background-color:rgb(3, 3, 3); 
   
-  }
-  h2{
-    margin-left: 20px;
-  }
-  #academyList{
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    
-  }
-  #academyBackground{
-    background-color: gray;
-    position: fixed;
-    width: 100%;
-    height:600px;
-    justify-content:center;
-  }
+
+}
+h2{
+  margin-left: 20px;
+  color: white;
+  font-size: 20px;
+}
+#academyList{
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  font-size: 20px;
   
-  ul li{
-    padding: 55px;
-    list-style: none;
-    
-    
-  }
-  ul li button{
-    cursor: pointer;
-    border: none;
-    background: none;
-    font-size: medium;
-    
-  }
-  ul li button:hover{
-    color: brown;
-  }
-  #adminAcademy{
-    font-size: 20px;
-  }
-  h5{
-    display: flex;
-    align-items: center;
-    margin-top:50px ;
-    margin-left: 50%;
-    margin-bottom: 5%;
-    font-size: medium;
-    font-weight: bold;
-  }
+}
+ #academyBackground{
+  background-image: url("https://images.pexels.com/photos/472311/pexels-photo-472311.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+
+  position: fixed;
+  width: 100%;
+  height:600px;
+  justify-content:center;
+} 
+
+ul li{
+  padding: 55px;
+  list-style: none;
   
   
-  #logout{
-    cursor: pointer;
-    border: none;
-    background: none;
-    margin-right:20px ;
-    
-  }
+}
+ul li button{
+  cursor: pointer;
+  border: none;
+  background: none;
+  color:white;
+  font-size: 20px;
   
-  #logout:hover{
-    color: brown;
-  }
-  #academyLeft{
-    display: flex ;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 30px;
-    float: left;
-    size: 10%;
-    
-  }
-  #academyLeft input{
-    width:330px;
-    height:50px;
-  }
-  #academyCenter input{
-    width:330px;
-    height:50px;
-  }
-  #academyCenter {
-    justify-content: center;
-    float: right;
-    margin-right:35%;
+}
+ul li button:hover{
+  color: brown;
+}
+#adminAcademy{
+  font-size: 20px;
+}
+h5{
+  display: flex;
+  align-items: center;
+  margin-top:25px ;
+  margin-left: 38%;
+  margin-bottom: 3.1%;
+  font-size: 25px;
+  font-weight: 530;
+}
+
+
+#logout{
+  cursor: pointer;
+  border: none;
+  background: none;
+  margin-right:20px ;
+  color: white;
+  font-size: 20px;
   
+}
+
+#logout:hover{
+  color: rgb(141, 17, 17);
+}
+#academyLeft{
+  display: flex ;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 30px;
+  float: left;
+  size: 10%;
   
-    
+}
+#academyLeft input{
+  width:330px;
+  height:50px;
+}
+#academyCenter input{
+  width:330px;
+  height:50px;
+}
+#academyCenter {
+  justify-content: center;
+  float: right;
+  margin-right:30%;
+
+
   
-  }
-  #academyDescription input{
-    width:330px;
-    height:100px;
-  }
-  #academyRight{
-    position: absolute;
-    bottom: 100px;
-    right: 16px;
-    margin-right: 2%;
-    border-radius:5%;
-  }
-  #addAcademy{
-    border-radius: 9px;
-  }
+
+}
+#academyDescription input{
+  width:330px;
+  height:100px;
+}
+#academyRight{
+  position: absolute;
+  bottom: 100px;
+  right: 16px;
+  margin-right: 2%;
+  border-radius:5%;
+}
+#addAcademy{
+  border-radius: 9px;
+}
+
+::placeholder{
+  font-style: italic;
+  font-size: medium;
+}
+input{
+  border-radius: 12px;
+}
+label{
+  font-size: 20px;
+  font-weight: 530;
   
-  ::placeholder{
-  
-    font-size: medium;
-  }
-  
-  
-  
+  /* font-variant:small-caps; */
+
+}
+
+
