--- a/angularapp1/src/app/addacademy/addacademy.component.html
+++ b/angularapp1/src/app/addacademy/addacademy.component.html
@@ -1,3 +1,4 @@
+<div class="main">
 <div id="academyHeader">
   <h2>School Admission</h2>
   <ul id="academyList">
@@ -24,41 +25,49 @@
   <h5>Add Academy</h5><br>
   <div id="academyLeft">
   <div  id="academyName" >
+      <label>Enter Academy Id</label>
       <input formControlName="instituteId" type="text" class="form-control" placeholder="Enter Academy Id"
       [(ngModel)]="institute.instituteId" name="instituteId"><br>
-      <small *ngIf="!addacademyform.get('instituteId').valid && addacademyform.get('instituteId').touched" class="text-white">* Invalid Academy ID</small>
+      <small *ngIf="!addacademyform.get('instituteId').valid && addacademyform.get('instituteId').touched" class="text-danger">* Invalid Academy ID</small>
+      <br>
+      <label>Enter Academy Name</label>
       <input formControlName="instituteName" type="text" id="instituteName" [(ngModel)]="institute.instituteName" name="instituteName" placeholder="Enter the Academy Name" class="form-control"><br>
-      <small *ngIf="!addacademyform.get('instituteName').valid && addacademyform.get('instituteName').touched" class="text-white">* Invalid Academy Name</small>
+      <small *ngIf="!addacademyform.get('instituteName').valid && addacademyform.get('instituteName').touched" class="text-danger">* Invalid Academy Name</small><br>
     </div>
   <div  id="imageUrl" >
+      <label>Enter Image url</label>
       <input [(ngModel)]="institute.imgUrl" formControlName="imageUrl" type="text" class="form-control" placeholder="Enter the academy Image url"
-      ><br>
-      <small *ngIf="!addacademyform.get('imageUrl').valid && addacademyform.get('imageUrl').touched" class="text-white">* Invalid Image URL</small>
-  </div>
+      >
+      <small *ngIf="!addacademyform.get('imageUrl').valid && addacademyform.get('imageUrl').touched" class="text-danger">* Invalid Image URL</small><br>
+  </div><br>
   <div  id="academyLocation" >
+      <label>Enter Academy Location</label>
       <input formControlName="academyLocation" type="text" class="form-control" placeholder="Enter Academy Location"
-      [(ngModel)]="institute.instituteAddress" name="instituteAddress"><br>
-      <small *ngIf="!addacademyform.get('academyLocation').valid && addacademyform.get('academyLocation').touched" class="text-white">
-          * Invalid Academy Loacation</small> 
-  </div>
+      [(ngModel)]="institute.instituteAddress" name="instituteAddress">
+      <small *ngIf="!addacademyform.get('academyLocation').valid && addacademyform.get('academyLocation').touched" class="text-danger">
+          * Invalid Academy Loacation</small><br> 
+  </div><br>
   </div>
   <div id="academyCenter">
       <div id="contactNumber" >
+          <label>Enter Contact Number</label>
           <input formControlName="mobileNumber" type="text" class="form-control"  placeholder="Enter the contact number"
-          [(ngModel)]="institute.mobileNo" name="mobileNo"><br>
-          <small *ngIf="!addacademyform.get('mobileNumber').valid && addacademyform.get('mobileNumber').touched" class="text-white">* Invalid Mobile Number</small>
+          [(ngModel)]="institute.mobileNo" name="mobileNo">
+          <small *ngIf="!addacademyform.get('mobileNumber').valid && addacademyform.get('mobileNumber').touched" class="text-danger">* Invalid Mobile Number</small><br>
       </div>
       <div  id="emailId" >
-          <input  formControlName="instituteEmail" type="email" class="form-control" placeholder="Enter the academy email"
-          [(ngModel)]="institute.email" name="email" ><br>
-          <small *ngIf="!addacademyform.get('instituteEmail').valid && addacademyform.get('instituteEmail').touched" class="text-white">* Invalid Academy Email ID</small>   
+          <label>Enter Email Id</label>
+          <input  formControlName="instituteEmail" type="email" class="form-control" placeholder="Enter the email-id"
+          [(ngModel)]="institute.email" name="email" >
+          <small *ngIf="!addacademyform.get('instituteEmail').valid && addacademyform.get('instituteEmail').touched" class="text-danger">* Invalid Academy Email ID</small><br>
 
 
-      </div>
+      </div><br>
       <div  id="academyDescription" >
+          <label>Enter Academy description</label>
           <input formControlName="academyDesc" type="text" class="form-control"  placeholder="Enter Academy description"
           [(ngModel)]="institute.instituteDescription" name="instituteDescription"><br><br>
-          <small *ngIf="!addacademyform.get('academyDesc').valid && addacademyform.get('academyDesc').touched" class="text-white">* Invalid Academy Description</small>
+          <small *ngIf="!addacademyform.get('academyDesc').valid && addacademyform.get('academyDesc').touched" class="text-danger">* Invalid Academy Description</small>
 
       </div><br><br>
   </div>
@@ -67,4 +76,5 @@
   </div>
 </form>
 
+</div>
 </div>
