--- a/angularapp1/src/app/updateacademy/updateacademy.component.html
+++ b/angularapp1/src/app/updateacademy/updateacademy.component.html
@@ -2,13 +2,13 @@
     <h2>School Admission</h2>
     <ul id="academyList">
         <li id="adminAcademy">
-            <a href="/institute"><button (click)="viewAcademy()" id="adminAcademy">Academy</button></a>
+            <button (click)="viewAcademy()" id="adminAcademy">Academy</button>
         </li>
         <li id="adminCourse">
-            <a href="/course"><button (click)="viewCourse()" id="adminCourse">Course</button></a>
+            <button (click)="viewCourse()" id="adminCourse">Course</button>
         </li>
         <li id="adminStudents">
-            <a href="/student"><button (click)="viewStudents()" id="adminStudents">Students</button></a>
+            <button (click)="viewStudents()" id="adminStudents">Students</button>
         </li>
         
   
@@ -24,32 +24,41 @@
     <h5>Update Academy</h5><br>
     <div id="academyLeft">
     <div  id="editAcademyName" >
+        <label>Enter Academy Id</label><br>
         <input formControlName="instituteId" type="text" class="form-control" placeholder="Enter Academy Id"
         [(ngModel)]="institute.instituteId" name="instituteId"><br>
         <small *ngIf="!updateacademyform.get('instituteId').valid && updateacademyform.get('instituteId').touched" class="text-white">* Invalid Academy ID</small>
-        <input formControlName="instituteName" type="text" id="instituteName" [(ngModel)]="institute.instituteName" name="instituteName" placeholder="Enter the Academy Name" class="form-control"><br>
+        <br>
+        <label>Enter Academy Name</label><br>
+        <input formControlName="instituteName" type="text" id="instituteName" [(ngModel)]="institute.instituteName" name="instituteName" placeholder="Enter Academy Name" class="form-control"><br>
         <small *ngIf="!updateacademyform.get('instituteName').valid && updateacademyform.get('instituteName').touched" class="text-white">* Invalid Academy Name</small>
       </div>
     <div  id="editImageUrl" >
-        <input [(ngModel)]="institute.imgUrl" name="imgUrl" formControlName="imageUrl" type="text" class="form-control" placeholder="Enter the academy Image url"
+        <label>Enter Image URL</label><br>
+        <input [(ngModel)]="institute.imgUrl" name="imgUrl" formControlName="imageUrl" type="text" class="form-control" placeholder="Enter Academy Image url"
         ><br>
         <small *ngIf="!updateacademyform.get('imageUrl').valid && updateacademyform.get('imageUrl').touched" class="text-white">* Invalid Image URL</small>
     </div>
     <div  id="editAcademyLocation" >
+        <label>
+            Enter Academy Location
+        </label>
         <input formControlName="academyLocation" type="text" class="form-control" placeholder="Enter Academy Location"
         [(ngModel)]="institute.instituteAddress" name="instituteAddress"><br>
         <small *ngIf="!updateacademyform.get('academyLocation').valid && updateacademyform.get('academyLocation').touched" class="text-white">
             * Invalid Academy Location
-        </small> 
+        </small> <br>
     </div>
     </div>
     <div id="academyCenter">
         <div id="editContactNumber" >
-            <input formControlName="mobileNumber" type="text" class="form-control"  placeholder="Enter the contact number"
+            <label>Enter Contact Number</label><br>
+            <input formControlName="mobileNumber" type="text" class="form-control"  placeholder="Enter Contact number"
             [(ngModel)]="institute.mobileNo" name="mobileNo"><br>
             <small *ngIf="!updateacademyform.get('mobileNumber').valid && updateacademyform.get('mobileNumber').touched" class="text-white">* Invalid Mobile Number</small>
         </div><br> 
         <div  id="editEmailId" >
+            <label>Enter Email ID</label>
             <input  formControlName="instituteEmail" type="email" class="form-control" placeholder="Enter the academy email"
             [(ngModel)]="institute.email" name="email" ><br>
             <small *ngIf="!updateacademyform.get('instituteEmail').valid && updateacademyform.get('instituteEmail').touched" class="text-white">* Invalid Academy Email ID</small>   
@@ -58,6 +67,7 @@
         </div><br>
 
         <div  id="editAcademyDescription" >
+            <label>Enter Academy Description</label>
             <input formControlName="academyDesc" type="text" class="form-control"  placeholder="Enter Academy description"
             [(ngModel)]="institute.instituteDescription" name="instituteDescription"><br><br>
             <small *ngIf="!updateacademyform.get('academyDesc').valid && updateacademyform.get('academyDesc').touched" class="text-white">* Invalid Academy Description</small>
