--- a/angularapp1/src/app/addstudent/addstudent.component.html
+++ b/angularapp1/src/app/addstudent/addstudent.component.html
@@ -12,7 +12,7 @@
       <div class="nav navbar-nav flex-container">
         <li class="active"><a routerLink="/addstudent">Add Student</a></li>
         <li><a routerLink="/institute">Academy</a></li>
-        <li><a routerLink="/course">Enrolled Course</a></li>
+        <li><a routerLink="/course">Course</a></li>
         <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </div>  
     </div>
